# knowledge-graph

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  graph.dot  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  spec.md
.cargo/: config.toml
backend/: Cargo.toml
backend/config/: app.yaml
backend/src/: main.rs
backend/src/storage/: io.rs  json_doc_status.rs  mod.rs
backend/tests/: storage.rs
docker/: entrypoint.sh  nginx.conf
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/lib/components/: DocumentTable.svelte  StatusFooter.svelte  Toolbar.svelte  TopNav.svelte
frontend/src/routes/: +page.svelte  +page.ts
runtime/: Cargo.toml  Dockerfile
runtime/config/: app.yaml
runtime/examples/: create_graph.rs  deduplication.rs  extract_entities.rs  lancedb_demo.rs  load_jina.rs  load_oai_embedder.rs  print_entities.rs  test_responses.rs  traverse_graph.rs
runtime/src/: lib.rs  main.rs
runtime/src/ai/: agent.rs  mod.rs  responses.rs  schemas.rs
runtime/src/pipeline/: chunker.rs  document_manager.rs  error_reporter.rs  extractor.rs  mod.rs  pipeline.rs  scheduler.rs  status_service.rs  types.rs  utils.rs
runtime/src/routes/: documents.rs  download.rs  graph.rs  mod.rs  types.rs  x402.rs
runtime/src/storage/: io.rs  json_doc_status.rs  json_kv.rs  manager.rs  mod.rs
runtime/tests/: storage.rs
webui/: Dockerfile  package.json  response.json  svelte.config.js  vite.config.ts
webui/src/lib/: api.ts  index.ts
webui/src/lib/codegen/types/: EntityNode.ts  EntityResponse.ts  GraphResponse.ts  GraphSearchEdge.ts  GraphSearchEntity.ts  GraphSearchPath.ts  GraphSearchResponse.ts  GraphSearchResult.ts  RelationEdge.ts  RelationshipEdgeResponse.ts
webui/src/lib/components/: AppShell.svelte  DocumentTable.svelte  FilterChips.svelte  KnowledgeGraph.svelte
webui/src/routes/: +page.svelte  +page.ts
