[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
fastrand = "2.3.0"
dotenvy = "0.15.7"
tiktoken-rs = "0.7.0"

[dev-dependencies]
tempfile = "3"
