[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
fastrand = "2.3.0"
dotenvy = "0.15.7"
tiktoken-rs = "0.7.0"
futures-util = "0.3.31"
futures = "0.3.31"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
lancedb = { version = "0.22.2", features = ["openai"] }
lance-index = "0.38.2"
rand = "0.9.2"
petgraph = "0.8.3"
ts-rs = "11.1.0"
x402-axum = "0.5.0"
x402-rs = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
embed_anything = { version = "0.6.4", features = ["metal"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
embed_anything = { version = "0.6.4", features = ["cuda"] }


[dev-dependencies]
tempfile = "3"
random_word = { version = "0.5.2", features = ["en"] }
